--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,13 +8,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_lints: ^1.0.0
   clipboard:
     path: ../
 
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  rows_lint: 0.1.0
   flutter_test:
     sdk: flutter
 
