--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,9 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  rows_lint: 0.1.0
   flutter_test:
     sdk: flutter
-  dart_lint_template:
-    path: ../dart_lint_template
 
 flutter:
   plugin:
