--- a/packages/clipboard_api/pubspec.yaml
+++ b/packages/clipboard_api/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  rows_lint: 0.1.0
   flutter:
     sdk: flutter
+
+dev_dependencies:
+  rows_lint: 0.1.1
